# chip8_emulator

./: CMakeLists.txt  main.c  stack.c  stack.h
